// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<div
  class="app"
>
  Hello 
  world
</div>
`;

exports[`App renders correctly 2`] = `
<div
  class="app"
>
  Hello 
  you
</div>
`;
